--- a/recipes/carbonara.html
+++ b/recipes/carbonara.html
@@ -18,5 +18,16 @@
         <li>Pecorino romano</li>
 
     </ul>
+    <h1>Procedimento</h1>
+    <ol>
+        <li>Tagliare il guanciale a listarelle e metterli su una padella</li>
+        <li>Mettere la pentola con acqua salata sul fuoco</li>
+        <li>versare i tuorli in una ciotola </li>
+        <li>mischiare assieme al pecorino e pepe </li>
+        <li>una volta che il guanciale è dorato, spegnere il fuoco e unire un po' di grasso alla carbocrema</li>
+        <li>quando la pasta è al dente spegnere il fuoco e versare la crema e il guanciale sulla pasta e amalgamare</li>
+        <li></li>
+        <li></li>
+    </ol>
 </body>
 </html>
