--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Smokey Recipes</h1>
     <ul>
-        <li><a href="recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="recipes/pancake.html">Pancake</a></li>
         <li><a href="recipes/carbonara.html">Carbonara</a></li>
     </ul>
     
